countdown clock added

--- a/index.html
+++ b/index.html
@@ -242,6 +242,9 @@
             </div>
           </div>
         </div>
+        <div class="clock-wrapper">
+          <p>Time Left: <span id="clock-timer">8h 00m</span></p>
+        </div>
       </div>
     </div>
 
