--- a/index.html
+++ b/index.html
@@ -223,13 +223,21 @@
                     <ul>
                       <li>🧾 Scan all items before the customer gets upset.</li>
                       <li>
-                        💵 If payment method is <strong>Cash</strong>, input
-                        amount, calculate and give change.
+                        💵 If payment method is <strong>Cash</strong>, you are
+                        to manually input the customer's total purchace and the
+                        customer's cash amount, click the calculate change
+                        button and return the correct change by clicking the
+                        give change button and finally confirm purchace.
                       </li>
                       <li>
-                        📲 If <strong>Card</strong>, just confirm purchase.
+                        📲 Otherwise if payment method is <strong>Card</strong>,
+                        go ahead and click confirm purchace button.
                       </li>
-                      <li>💰 The faster you are, the higher your tip!</li>
+                      <li>
+                        💰The faster you perform, the happier the customer and
+                        the higher your chances of getting a tip from the
+                        customer.
+                      </li>
                     </ul>
                   </div>
                 </div>
@@ -239,22 +247,37 @@
                     <h3>Shift Management</h3>
                     <ul>
                       <li>
-                        ⏰ You have limited time to serve a fixed number of
+                        ⏰ You have a limited time to serve a fixed number of
                         customers.
                       </li>
-                      <li>🧑‍💼 Serve all customers before time runs out.</li>
-                      <li>📊 Earn salary and tips, avoid grocery losses!</li>
+                      <li>
+                        🧑‍💼 Serve all customers before time runs out to earn job
+                        security.
+                      </li>
+                      <li>
+                        📊 Earn salary and tips, but be mindful of grocery
+                        losses!
+                      </li>
                     </ul>
 
                     <h3>Firing & Salary</h3>
                     <ul>
-                      <li>😠 Unhappy customers reduce job security.</li>
+                      <li>😠 Unhappy customers reduce your job security.</li>
                       <li>
-                        🔥 0% job security = you're fired + pay 10% of losses.
+                        🔥 If job security hits 0, you're fired and must pay
+                        back 10% of store losses.
                       </li>
-                      <li>📈 85% job security = salary increase next month.</li>
-                      <li>📅 Salary is paid monthly (in-game time).</li>
+                      <li>
+                        📈 Job Security reaching a certain total every workday
+                        increases your chances of getting a promotion and
+                        starting stage 2 in your career.
+                      </li>
+                      <li>
+                        📅 At the end of each in-game month (30 days), your
+                        salary is deposited.
+                      </li>
                     </ul>
+                    <p>Good Luck! 👍</p>
                   </div>
                 </div>
                 <button id="close-rulebook-btn">✖</button>
