fixed more end shift logic bugs.

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <div class="table-edge"></div>
           <div class="table-side">
             <div class="tips-jar">
-              Total Tips: <span id="tips-count"></span>
+              Total Tips: <span id="tips-count">$0.00</span>
             </div>
             <div id="job-security-bar">Job Security: 50%</div>
 
@@ -221,7 +221,10 @@
 
                     <h3>Gameplay Rules</h3>
                     <ul>
-                      <li>🧾 Scan all items before the customer gets upset.</li>
+                      <li>
+                        🧾 Click and Scan all items before the customer gets
+                        upset.
+                      </li>
                       <li>
                         💵 If payment method is <strong>Cash</strong>, you are
                         to manually input the customer's total purchace and the
